[gd_scene load_steps=5 format=3 uid="uid://biff12c7vb888"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_o6nma"]
[ext_resource type="Texture2D" uid="uid://c3u637tjckx7q" path="res://Assets/UI/Main_menu/fonas.png" id="2_02rpt"]
[ext_resource type="Texture2D" uid="uid://bq5tpjjur4pi7" path="res://Assets/UI/Main_menu/Empty_page.png" id="3_cmy4d"]

[sub_resource type="Theme" id="Theme_8yoo2"]
CheckButton/constants/icon_max_width = 500

[node name="Menu" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6nma")

[node name="Fonas" type="Sprite2D" parent="."]
position = Vector2(0.888977, -1.49994)
scale = Vector2(0.501389, 0.501389)
texture = ExtResource("2_02rpt")

[node name="EmptyPage" type="Sprite2D" parent="."]
position = Vector2(-1.66669, -0.25)
scale = Vector2(0.49838, 0.49838)
texture = ExtResource("3_cmy4d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GraphicsSelect" type="Button" parent="CanvasLayer"]
offset_left = 19.0
offset_top = 379.0
offset_right = 413.0
offset_bottom = 456.0
theme_override_colors/font_pressed_color = Color(0.695503, 0.695503, 0.695503, 1)
theme_override_font_sizes/font_size = 50
toggle_mode = true
button_pressed = true
text = " Graphics"
alignment = 0

[node name="SoundSelect" type="Button" parent="CanvasLayer"]
offset_left = 22.0
offset_top = 543.0
offset_right = 325.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = " Sound"
alignment = 0

[node name="Graphics" type="GridContainer" parent="CanvasLayer"]
visible = false
offset_left = 740.0
offset_top = 369.0
offset_right = 1840.0
offset_bottom = 833.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 100
columns = 2

[node name="ResolutionLabel" type="Label" parent="CanvasLayer/Graphics"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resolution"

[node name="ResolutionSelector" type="OptionButton" parent="CanvasLayer/Graphics"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
alignment = 1
selected = 0
item_count = 7
popup/item_0/text = "1920x1080"
popup/item_1/text = "1760x990"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1536x864"
popup/item_3/id = 3
popup/item_4/text = "1440x900"
popup/item_4/id = 6
popup/item_5/text = "1366x768"
popup/item_5/id = 4
popup/item_6/text = "1280x720"
popup/item_6/id = 5

[node name="FullscreenLabel" type="Label" parent="CanvasLayer/Graphics"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Fullscreen"

[node name="FullscreenButton" type="Button" parent="CanvasLayer/Graphics"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "on"

[node name="Sound" type="GridContainer" parent="CanvasLayer"]
offset_left = 740.0
offset_top = 369.0
offset_right = 1840.0
offset_bottom = 833.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 100
columns = 2

[node name="MusicLabel" type="Label" parent="CanvasLayer/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Sound"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 5.0
step = 0.05
value = 1.0

[node name="MiscLabel" type="Label" parent="CanvasLayer/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Miscellaneous"

[node name="MiscSlider" type="HSlider" parent="CanvasLayer/Sound"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="MuteLabel" type="Label" parent="CanvasLayer/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Mute"

[node name="MuteButton" type="CheckButton" parent="CanvasLayer/Sound"]
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_8yoo2")
vertical_icon_alignment = 0
expand_icon = true

[node name="Back" type="Button" parent="CanvasLayer"]
offset_right = 416.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="CanvasLayer/GraphicsSelect" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="CanvasLayer/SoundSelect" to="." method="_on_sound_pressed"]
[connection signal="item_selected" from="CanvasLayer/Graphics/ResolutionSelector" to="." method="_on_resolution_selector_item_selected"]
[connection signal="pressed" from="CanvasLayer/Graphics/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="ready" from="CanvasLayer/Sound/MusicSlider" to="." method="_on_music_slider_ready"]
[connection signal="value_changed" from="CanvasLayer/Sound/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="visibility_changed" from="CanvasLayer/Sound/MusicSlider" to="." method="_on_music_slider_visibility_changed"]
[connection signal="ready" from="CanvasLayer/Sound/MiscSlider" to="." method="_on_misc_slider_ready"]
[connection signal="value_changed" from="CanvasLayer/Sound/MiscSlider" to="." method="_on_misc_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Sound/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="ready" from="CanvasLayer/Sound/MuteButton" to="." method="_on_mute_button_ready"]
[connection signal="toggled" from="CanvasLayer/Sound/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
